--- a/notes.org
+++ b/notes.org
@@ -767,7 +767,40 @@ pub-sub, task distribution, and request-reply. It's fast enough to be the
 fabric for clustered products. Its asynchronous I/O model gives you scalable
 multicore applications, built as asynchronous message-processing tasks. It has
 a score of language APIs and runs on most operating systems.
-
+** Ask Why a System Works?:
+- learn how popular applications work at a high-level.
+- Start to understand why some component is used instead of another.
+- Build serious side projects. Start simple and iterate to improve & refine it.
+- Build a system from scratch and get familiar with all the processes and details of its construction.
+- Focus less on mechanics and more on trade-offs.
+- Focus on the high-level. Low-level will crop up.
+** Breakdown strategies:
+- Ask refining questions.
+  - *Functional:* Requirements the Client needs directly. eg. Send messages in near real-time to contacts.
+  - *Non-functional:* indirect requirements. eg. Performance shouldn't degrade with load.
+  - Clarify assumptions.
+  - Honesty when ignorant.
+- Handle the data.
+  - Data size now?
+  - Data growth rate?
+  - How data is consumed by User or othe SubSystems?
+  - Read / Write heavy?
+  - Strict or Eventual Consistency?
+  - what's the durability target of the data?
+  - Privacy/Regulatory concerns for storing/transferring User data?
+- Discuss the components.
+  - Highlight reasoning.
+  - Talk around conflicts with examples of pain/components needed to work the other options.
+  - High-level API design for User clarity.
+- Discuss trade-offs.
+  - Pros/Cons.
+  - Monetary/Technical complexity (aim for Resource efficiency).
+  - Plan for this designs weakness.
+  - Highlight and explain weaknesses. eg. Design won't scale, but added monitoring, to reduce cost and time to do a new design.
+  - Add fault tolerance and security to the design.
+** Abstractions:
+- Network: Use RPCs (Remote Procedure Calls) to abstract away network communications and make all calls appear to be local.
+-
 * Training Sites:
 - https://www.educative.io/ - Text-based teaching resources (instead of video)
   and web-based coding environments.`
